--- a/Neural Networks/Notebook/movie_reviews.ipynb
+++ b/Neural Networks/Notebook/movie_reviews.ipynb
@@ -2,16 +2,150 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "eb80787c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the mountain is cold tonight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"   The mountain is cold tonight!   \"\n",
+    "cleaned_text = text.strip().lower().replace(\"!\", \".\")\n",
+    "print(cleaned_text)  # Output: \"the mountain is cold tonight.\"  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b67a01ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_text = cleaned_text.replace(\"mountain\", \"shop\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "09f28657",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the shop is cold tonight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cleaned_text)  # Output: \"the shop is cold tonight.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "83b9b602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capitalized_text = cleaned_text.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ac5c876f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Shop Is Cold Tonight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(capitalized_text)  # Output: \"The Shop Is Cold Tonight.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1841c152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_text = cleaned_text.replace(\"the\", \"The\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fa083d36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shop is cold tonight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cleaned_text)  # Output: \"the shop is cold tonight.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f8f0026",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8768a1ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3a4bd30",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
