Save from mysql

--- a/HCAHPS Survey Results/Notebooks/state_results.ipynb
+++ b/HCAHPS Survey Results/Notebooks/state_results.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b54f7f24",
    "metadata": {},
    "outputs": [
@@ -194,6 +194,17 @@
       " 5   Top-box Percentage     4580 non-null   int64 \n",
       "dtypes: int64(3), object(3)\n",
       "memory usage: 214.8+ KB\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
